tests/errors/validation/nested-function.fn
---
Description: Function declared inside another function body
Expected: FN2002
---

type NestTest
{
    fn Outer
    {
        fn Inner() -> i32
        {
            return 1
        }
    }
}

type Program
{
    fn Main -> i32
    {
        return 0
    }
}
